--- a/blog/static/css/styles.css
+++ b/blog/static/css/styles.css
@@ -93,6 +93,20 @@ h1 {
     background-color: #0056b3;
 }
 
+#submitDBtn .btn {
+    display: inline-block;
+    text-decoration: none;
+    background-color: red;
+    color: white;
+    padding: 10px 20px;
+    border-radius: 8px;
+    font-size: 16px;
+    font-weight: bold;
+    border: none;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+
 form {
     display: flex;
     flex-direction: column;
