--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -1,24 +1,31 @@
 {% load static %}
+<!-- -->
 <!DOCTYPE html>
 <html>
-<head>
-    <title >Blog</title>
-    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
-</head>
-<body>
+  <head>
+    <title>Blog</title>
+    <link rel="stylesheet" href="{% static 'css/styles.css' %}" />
+  </head>
+  <body>
     <h1>Posts</h1>
     <div id="allPost">
-        <ul>
-            {% for post in posts %}
-            <div id="post">
-                <a href="{% url 'post_detail' post.id %}">{{ post.title }}</a>
-                <small>{{ post.date_posted }}</small>
-            </div>
-            {% endfor %}
-        </ul>
+      <ul>
+        {% for post in posts %}
+        <div id="post">
+          <a href="{% url 'post_detail' post.id %}">{{ post.title }}</a>
+          <small>{{ post.date_posted }}</small>
+
+          <!-- Formulario para eliminar el post -->
+          <form action="{% url 'delete_post' post.id %}" method="post">
+            {% csrf_token %}
+            <button class="btn" type="submit">X</button>
+          </form>
+        </div>
+        {% endfor %}
+      </ul>
     </div>
     <div class="btn">
-        <a href="{% url 'new_post' %}">Add</a>
+      <a href="{% url 'new_post' %}">Add</a>
     </div>
-</body>
+  </body>
 </html>
